Bug 300977 - Playlist count in Saved Playlists root items don't update correctly
Summary: Playlist count in Saved Playlists root items don't update correctly
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Playlists/Saved Playlists (other bugs)
Version First Reported In: 2.5-git
Platform: unspecified Linux
: NOR normal
Target Milestone: 2.6
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-01 07:24 UTC by Bart Cerneels
Modified: 2012-06-06 17:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bart Cerneels 2012-06-01 07:24:29 UTC
After deleting or saving a playlist. Both with SQL and Files, probably a model/view problem.

Reproducible: Always
Comment 1 Bart Cerneels 2012-06-05 13:10:51 UTC
Git commit e4c09dd3d207e7de4c9db2cd382746f98764c0dd by Bart Cerneels.
Committed on 05/06/2012 at 14:54.
Pushed by shanachie into branch 'master'.

Apply update from QtGroupingProxy.

commit 42febf5 from https://gitorious.org/qtgroupingproxy/qtgroupingproxy
	Call endRemoveRows in reverse order as begin...

	This is a hack, because beginRemoveRows() should always be followed
	by endRemoveRows() before the next remove. But since QAbstractItemView
	uses a stack to apply changes it works with those. Might break proxyies
	though.

Possible fix for SortFilterProxy crashes.
Related: bug 256869
FIXED-IN:2.6

M  +40   -16   src/browsers/playlistbrowser/QtGroupingProxy.cpp

http://commits.kde.org/amarok/e4c09dd3d207e7de4c9db2cd382746f98764c0dd
Comment 2 Bart Cerneels 2012-06-06 17:50:09 UTC
Git commit afaf42eb065074ed4c0b023e602f4e08f63c4d43 by Bart Cerneels.
Committed on 05/06/2012 at 14:54.
Pushed by shanachie into branch 'master'.

Apply update from QtGroupingProxy.

commit 42febf5 from https://gitorious.org/qtgroupingproxy/qtgroupingproxy
	Call endRemoveRows in reverse order as begin...

	This is a hack, because beginRemoveRows() should always be followed
	by endRemoveRows() before the next remove. But since QAbstractItemView
	uses a stack to apply changes it works with those. Might break proxyies
	though.

Fixes QVector crash in QSortFilterProxyModel with Qt debug builds.
Related: bug 256869
FIXED-IN:2.6

M  +3    -2    src/browsers/playlistbrowser/PlaylistBrowserCategory.cpp
M  +1    -5    src/browsers/playlistbrowser/PlaylistBrowserModel.cpp
M  +13   -2    src/browsers/playlistbrowser/PlaylistsByProviderProxy.cpp
M  +1    -0    src/browsers/playlistbrowser/PlaylistsByProviderProxy.h
M  +2    -2    src/browsers/playlistbrowser/PlaylistsInFoldersProxy.cpp
M  +91   -44   src/browsers/playlistbrowser/QtGroupingProxy.cpp
M  +14   -11   src/browsers/playlistbrowser/QtGroupingProxy.h

http://commits.kde.org/amarok/afaf42eb065074ed4c0b023e602f4e08f63c4d43