Apply update from QtGroupingProxy.

commit 42febf5 from https://gitorious.org/qtgroupingproxy/qtgroupingproxy
	Call endRemoveRows in reverse order as begin...

	This is a hack, because beginRemoveRows() should always be followed
	by endRemoveRows() before the next remove. But since QAbstractItemView
	uses a stack to apply changes it works with those. Might break proxyies
	though.

Fixes QVector crash in QSortFilterProxyModel with Qt debug builds.

CCBUG:256869

BUG:300977
FIXED-IN:2.6